[project]
name = "dl-asl-project"
version = "0.1.0"
description = "ASL alphabet recognition comparing a custom CNN baseline against ResNet18 transfer learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
